--- a/geometria.tex
+++ b/geometria.tex
@@ -59,10 +59,11 @@ Dibujemos el trozo de tela del sastre. Punteado era el deseo original, y el de l
     \[
     (l-2)(l+2) = l\cdot l + l\cdot 2- 2\cdot l - 2\cdot 2 = l^2+2l-2l -4 = l^2-4.
     \]
-    Es decir, 4 unidades cuadradas menos que el cuadrado original. La respuesta correcta es la B.
-
+    Es decir, 4 unidades cuadradas menos que el cuadrado original. La respuesta correcta es la B. \hfill $\square$
+    
+    {\small \itshape
     Este es un ejemplo de la fórmula notable ``diferencia de cuadrados:''
-    \[(a+b)(a-b) = a^2-b^2\] \hfill $\square$
+    \[(a+b)(a-b) = a^2-b^2\]}
 \end{solution}
 
 
@@ -80,7 +81,7 @@ cuadrilátero $P$ y el cuadrado $Q$? \footnote{\cite{SEMA2021}}
     \choice 23 $\cmdos$
     \choice 28 $\cmdos$
     \choice 39 $\cmdos$
-    \choice 44 $\cmdos$
+    \CorrectChoice 44 $\cmdos$
 \end{choices}
 
 \begin{solution}
@@ -97,7 +98,7 @@ cuadrilátero $P$ y el cuadrado $Q$? \footnote{\cite{SEMA2021}}
 Un terreno rectangular tiene un perímetro de $60$ metros y el largo es el doble del ancho. ¿Cuánto mide el ancho?
 
 \begin{choices}
-    \choice 10 m %%%
+    \CorrectChoice 10 m %%%
     \choice 12 m
     \choice 15 m
     \choice 18 m
@@ -120,7 +121,7 @@ La altura de un triángulo es el doble de su base. Si el área del triángulo es
     \choice 6 cm
     \choice 8 cm
     \choice 9 cm
-    \choice 12 cm %%%
+    \CorrectChoice 12 cm %%%
 \end{choices}
 
 \begin{solution}
@@ -137,8 +138,9 @@ La altura de un triángulo es el doble de su base. Si el área del triángulo es
     \[
     A = 144\cmdos =  \frac{b\cdot h}{2} = \frac{b \cdot 2b}{2} = b^2
     \]
-    Sabemos que $144 = 12^2$ (vale la pena repasar cuáles son los cuadrados perfectos, al menos hasta 15), luego la base del triángulo mide $b=12\cm$
+    Sabemos que $144 = 12^2$ (vale la pena repasar cuáles son los cuadrados perfectos, al menos hasta 15), luego la base del triángulo mide $b=12\cm$. La opción correcta es la D. \hfill $\square$
 
+    {\small\itshape
     Como una curiosidad, podemos obtener un cuadrado de lado $b$ a partir de este triángulo:
     \begin{center}
     \begin{tikzpicture}
@@ -169,7 +171,7 @@ La altura de un triángulo es el doble de su base. Si el área del triángulo es
             \draw[thick] (0,0) rectangle (2,2);
         \end{scope}
     \end{tikzpicture}
-    \end{center} \hfill $\square$
+    \end{center}}
 \end{solution}
 
 \question
@@ -191,9 +193,10 @@ En Papa John's venden pizzas de 8 pulgadas y de 10 pulgadas de diámetro. Si la 
     \[
     \frac{250/\pi}{200/\pi} = \frac{250}{200} = \frac{25}{20} = \frac{5}{4} = 1.25 = 125\%.
     \]
-    Es decir, el precio por pulgada cuadrada de la pizza pequeña es un $25\%$ más que el de la pizza grande.
+    Es decir, el precio por pulgada cuadrada de la pizza pequeña es un $25\%$ más que el de la pizza grande. La opción correcta es la A. \hfill $\square$
     
-    (Aunque no lo parezca, con aumentar un $25\%$ el diámetro de una pizza, el área aumenta en más del $50\%$, de hecho, va a ser $1.25^2 = 1.5625$ veces el área de la pequeña, un $56\%$ más). \hfill $\square$
+    {\small \itshape
+    Aunque no lo parezca, con aumentar un $25\%$ el diámetro de una pizza, el área aumenta en más del $50\%$, de hecho, va a ser $1.25^2 = 1.5625$ veces el área de la pequeña, un $56\%$ más.}
 \end{solution}
 
 \question El largo de un terreno rectangular es el doble de su ancho. Si el terreno tiene un área de $288$ metros cuadrados, ¿cuál es su largo?
@@ -215,7 +218,7 @@ En Papa John's venden pizzas de 8 pulgadas y de 10 pulgadas de diámetro. Si la 
         
     \end{tikzpicture}
     \end{center}
-    Si $x$ es el ancho del terreno, $2x$ es el largo y su área es $288\text{m}^2 = 2x^2$, por lo que $x^2 = 144 \text m^2$. De esta forma $x = 12$ m. El largo del terreno es, por tanto $2x = 24$ m. \hfill $\square$
+    Si $x$ es el ancho del terreno, $2x$ es el largo y su área es $288\text{m}^2 = 2x^2$, por lo que $x^2 = 144 \text m^2$. De esta forma $x = 12$ m. El largo del terreno es, por tanto $2x = 24$ m. La opción correcta es la B. \hfill $\square$
 \end{solution}
 
 \question André, asumiendo que su finca tenía forma cuadrada, midió uno solo de los lados y obtuvo que medía 120 m. Daniel midió ambos lados de la finca y, en el lado que midió André, Daniel obtuvo una medida 10\% menor que la de André. Al medir el otro lado, obtuvo un 20\% más que con el primero. Ambos calculan el área que piensan que tiene la finca. Con certeza
@@ -237,18 +240,19 @@ En Papa John's venden pizzas de 8 pulgadas y de 10 pulgadas de diámetro. Si la 
     \[
     108 \cdot 129.6 = 100\cdot 129.6 + 8\cdot 129.6 = 12960 + 800+160 + 72 +4.8 = 13760+236.8 = 13996.8
     \]
-    Por tanto con certeza André obtuvo un área mayor que la de Daniel. 
+    Por tanto con certeza André obtuvo un área mayor que la de Daniel. \hfill $\square$. 
 
-    Duramos mucho haciendo cálculos. Que pasa si olvidamos la medida de $120$ m, y simplemente decimos que $x$ fue la medida obtenida por André, entonces podemos simplificarlo todo.
+    {\small \itshape
+    Si olvidamos los de $120$ m, y en su lugar denotamos por $x$ la medida obtenida por André, se simplifican los cálculos.
 
     El área obtenida por André fue de $x^2$, y Daniel obtuvo, para el lado que midió André, $0.9x$ (un $10\%$ menos), y con el otro, un $20\%$ más que $0.9x$, es decir $1.2\cdot 0.9x$. Así el área que obtiene Daniel es de $0.9x\cdot 1.2\cdot0.9x = 0.9^2\cdot1.2x^2$ . Para ver si $0.9^2\cdot1.2x^2 $ es mayor o menor que $x^2$, basta ver si $0.9^2\cdot1.2$ es mayor o menor que 1, pues $x^2$ es un número positivo.
     \[
     0.9^2\cdot 1.2 = \left(\frac{9}{10}\right)^2\cdot\frac{12}{10} = \frac{81\cdot 12}{100\cdot 10} = \frac{810+162}{1000} = \frac{972}{1000} < 1
     \]
-    Y con bastantes menos cálculos, obtenemos que la medida que obtuvo Daniel es menor (¿en qué porcentaje?) que la que obtuvo André. \hfill $\square$
+    Y con bastantes menos cálculos, obtenemos que la medida que obtuvo Daniel es menor (¿en qué porcentaje?) que la que obtuvo André.} 
 \end{solution}
 
-\question En la figura se muestra un círculo inscrito en un cuadrado cuyo perímetro es 32 cm. El área, en centímetros cuadrados, de la región sombreada con gris corresponde a
+\question En la figura se muestra un círculo inscrito en un cuadrado cuyo perímetro es 32 cm. El área, en centímetros cuadrados, de la región sombreada con gris corresponde a\footnote{\cite{OLCOMAN1-2021}}
 \begin{center}
 \begin{tikzpicture}
     \draw (-1, -1) rectangle (1, 1);
@@ -268,21 +272,32 @@ En Papa John's venden pizzas de 8 pulgadas y de 10 pulgadas de diámetro. Si la 
 
     Como el perímetro de un cuadrado es la suma de los cuatro lados, $4l = 32$cm, y por tanto $l=8$cm. De aquí, tenemos que el área del cuadrado es $A_\square = l^2 = 8^2\cmdos = 64\cmdos$. 
     
+    \begin{center}
+    \begin{tikzpicture}
+        \draw (-1, -1) rectangle (1, 1);
+        \node[below] at (0,-1) {8cm};
+        \node[left] at (-1,0) {8cm};
+        \draw[->] (0,0) -- node[above] {4cm} (1,0);
+        \draw (0,0) circle [radius=1cm];
+        \fill[gray] (-1, -1) -- (0, -1) arc[start angle=-90, end angle=-180, radius =1cm] -- cycle;
+    \end{tikzpicture}
+    \end{center}
+
     Por otro lado, notemos que el diámetro del círculo coincide con el lado del cuadrado, 8cm. El radio es la mitad, $r = 8/2 = 4$cm. El área del círculo es entonces $A_\bigcirc = \pi\cdot r^2 = 16\pi\cmdos$
     
-    Por tanto, el área de lo que queda al quitar el círculo al cuadrado es $64-16\pi$ centímetros cuadrados. Esta área está formada por cuatro esquinas (\begin{tikzpicture}[scale = 0.2]
+    Por tanto, el área de lo que queda al quitar el círculo al cuadrado es $64-16\pi$ centímetros cuadrados. Esta área está formada por cuatro esquinas \begin{tikzpicture}[scale = 0.2]
     \draw (-1, -1) rectangle (1, 1);
     \draw (0,0) circle [radius=1cm];
     \fill[gray] (-1, -1) -- (0, -1) arc[start angle=-90, end angle=-180, radius =1cm] -- cycle;
     \fill[gray!50] (-1, 1) -- (1, 1) -- (1, -1) -- (0,-1) arc[start angle=-90, end angle=180, radius =1cm] -- cycle;
-\end{tikzpicture}) como la que queremos calcular, por lo que el área sombreada es (en centímetros cuadrados)
+\end{tikzpicture} como la que queremos calcular, por lo que el área sombreada es (en centímetros cuadrados)
     \[
     A_S = \frac{64-16\pi}{4} = \frac{64}{4} - \frac{16\pi}{4} = 16 - 4\pi
     \]
-La respuesta correcta es la B.
+La respuesta correcta es la B. \hfill $\square$
 \end{solution} 
 
-\question En la figura adjunta se muestra un \textit{pentaminó}, que es una figura compuesta por 5 cuadrados congruentes en donde cada uno tiene al menos un lado en común con otro cuadrado. Si el perímetro de la figura es de 60 cm, entonces el área de la región sombreada con gris, en centímetros cuadrados, corresponde a
+\question En la figura adjunta se muestra un \textit{pentaminó}, que es una figura compuesta por 5 cuadrados congruentes en donde cada uno tiene al menos un lado en común con otro cuadrado. Si el perímetro de la figura es de 60 cm, entonces el área de la región sombreada con gris, en centímetros cuadrados, corresponde a\footnote{\cite{OLCOMAN1-2021}}
 \begin{center}
 \begin{tikzpicture}
     \clip (0,0) -- (1,0) -- (1,1) -- (3,1) -- (3,2) -- (1, 2) -- (1,3) -- (0,3) -- cycle;
@@ -297,7 +312,25 @@ La respuesta correcta es la B.
     \choice 25
     \choice 27
     \choice 36
-    \choice 75
+    \CorrectChoice 75
 \end{choices}
 
+\begin{solution}
+    Sea $x$ la medida del lado de un cuadrado. Contemos cuantos lados de cuadrado hay en el perímetro del pentaminó
+    \begin{center}
+    \begin{tikzpicture}
+        \foreach \x/\y/\pos in {0.5/0/below, 1/0.5/right, 1.5/1/below, 2.5/1/below, 3/1.5/right, 2.5/2/above, 1.5/2/above, 1/2.5/right, 0.5/3/above, 0/2.5/left, 0/1.5/left, 0/0.5/left}
+            \node[\pos] at (\x,\y) {$x$};
+        \clip (0,0) -- (1,0) -- (1,1) -- (3,1) -- (3,2) -- (1, 2) -- (1,3) -- (0,3) -- cycle;
+        \fill[gray] (0,0) rectangle (1,1);
+        \fill[gray] (0,2) rectangle (1,3);
+        \fill[gray] (2,1) rectangle (3,2);
+        \draw (0,0) grid (3,3);
+    \end{tikzpicture}
+    \end{center}
+    Vemos que hay 12, por lo que $12x = 60\cm$ es el perímetro de la figura. Diviendo entre 12 obtenemos $x = 5\cm$. Cada cuadradito tiene lado $x$, por lo que su áres es de $x^2 = 5^2\cmdos = 25\cmdos$. Como el área sombreada se compone de tres cuadraditos, su área es de $3\cdot 25\cmdos = 75\cmdos$. La respuesta correcta es la D. \hfill $\square$
+\end{solution}
+
 \end{questions}
+
+\printnotes
