--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[answers]{exam}
+\documentclass{exam}
 \usepackage{graphicx}
 \usepackage[margin=1in]{geometry}
 \usepackage[spanish, es-lcroman]{babel}
