--- a/algebra.tex
+++ b/algebra.tex
@@ -72,7 +72,7 @@ Una profesora tenía $10\,000$ gapes y compró 4 cuadernos y 2 lápices para cad
     \[
     10000 - 20\cdot200 - 10\cdot 100
     \]
-    Por lo tanto, la respuesta correcta es la A.
+    Por lo tanto, la respuesta correcta es la A. \hfill $\square$
 \end{solution}
 
 \question
@@ -95,7 +95,7 @@ En un terreno hay 130 árboles, de los cuales 94 son árboles altos y el resto s
             Viejos (82) &   $Z$    &    $Y$           \\ \hline
         \end{tabular}
     \end{center}
-    Como la cantidad de árboles jóvenes es de 48, y 9 de esos son medianos, entonces hay $X = 48-9 = 39$ árboles jóvenes altos. Por último, como hay 94 árboles altos, de los cuales 39 son jóvenes, deben haber $94-39=55$ árboles altos viejos. Podemos verificar nuestra respuesta: Como hay 36 medianos de los cuales 9 son jóvenes, debe haber $36-9 = 27$ medianos viejos. Y como hay 82 \'arboles viejos de los cuales 27 son medianos, debe haber $82-27=55$ árboles viejos altos. Basta con hacerlo de una de las formas. Hacer las dos nos da una mayor confianza de no haber cometido un error. Por lo tanto, la respuesta correcta es la C.
+    Como la cantidad de árboles jóvenes es de 48, y 9 de esos son medianos, entonces hay $X = 48-9 = 39$ árboles jóvenes altos. Por último, como hay 94 árboles altos, de los cuales 39 son jóvenes, deben haber $94-39=55$ árboles altos viejos. Podemos verificar nuestra respuesta: Como hay 36 medianos de los cuales 9 son jóvenes, debe haber $36-9 = 27$ medianos viejos. Y como hay 82 \'arboles viejos de los cuales 27 son medianos, debe haber $82-27=55$ árboles viejos altos. Basta con hacerlo de una de las formas. Hacer las dos nos da una mayor confianza de no haber cometido un error. Por lo tanto, la respuesta correcta es la C. \hfill $\square$
 \end{solution}
 
 \question
@@ -119,7 +119,7 @@ El peso de 2 platos es igual al peso de 3 botellas y el peso de 3 vasos es igual
     \[
     8p+6v = \cancelto{4}{8}\cdot\frac{3}{\cancel 2}b + \cancelto{2}{6}\cdot\frac{2}{\cancel 3}b = 4\cdot3b + 2\cdot2b = 12b + 4b = 16b 
     \]
-    Por lo tanto, el peso de 16 botellas equivale al peso de 8 platos y 6 vasos. La respuesta correcta es la B.
+    Por lo tanto, el peso de 16 botellas equivale al peso de 8 platos y 6 vasos. La respuesta correcta es la B. \hfill $\square$
 \end{solution}
 
 \question
@@ -161,12 +161,12 @@ edades que tendrán sus dos hermanos?\footnote{\cite{SEMA2021}}
     \choice 28
     \choice 16
     \choice 9
-    \choice 8 %%%%%%%%
+    \CorrectChoice 8 %%%%%%%%
     \choice 7
 \end{choices}
 
 \begin{solution}
-    Cuando han pasado $x$ años, Rebeca tiene $20+x$ años y sus hermanos $6+x$ y $7+x$ años, cuya suma es $13+2x$. Queremos saber el $x$ más pequeño tal que $20+x < 13+2x$. Pasando a restar el 13 a la izquierda y el $x$ a la derecha, tenemos $7 < x$. Es decir, deben transcurrir 8 años como mínimo para que la edad de Rebeca (que sería 28) sea menor a la suma de las edades de sus hermanos (14 y 15, cuya suma es 29).
+    Cuando han pasado $x$ años, Rebeca tiene $20+x$ años y sus hermanos $6+x$ y $7+x$ años, cuya suma es $13+2x$. Queremos saber el $x$ más pequeño tal que $20+x < 13+2x$. Pasando a restar el 13 a la izquierda y el $x$ a la derecha, tenemos $7 < x$. Es decir, deben transcurrir 8 años como mínimo para que la edad de Rebeca (que sería 28) sea menor a la suma de las edades de sus hermanos (14 y 15, cuya suma es 29). \hfill $\square$
 \end{solution}
 
 \question
@@ -179,14 +179,15 @@ En la escuela Aprendamos hay 150 estudiantes, de los cuales 95 son de primer cic
 \end{choices}
 
 \begin{solution}
-    Este es como el de los árboles que estaba más arriba. Ahora, tenemos 150 estudiantes. 95 son de primer ciclo y $150-95= 55$ son de segundo. 70 son varones, luego $150-70=80$ son mujeres. La quinta parte de los estudiantes de segundo ciclo son varones, esto es $55/5 = 11$. Hay 11 varones en segundo ciclo, de forma que el resto $55-11 = 44$ son mujeres. Como hay en total 80 mujeres y 44 están en segundo ciclo, entonces el resto, que serían $80-44=36$ están en primer ciclo. Así, hay 36 estudiantes de primer ciclo mujeres y la respuesta correcta es la B.
+    Este es como el de los árboles que estaba más arriba. Ahora, tenemos 150 estudiantes. 95 son de primer ciclo y $150-95= 55$ son de segundo. 70 son varones, luego $150-70=80$ son mujeres. La quinta parte de los estudiantes de segundo ciclo son varones, esto es $55/5 = 11$. Hay 11 varones en segundo ciclo, de forma que el resto $55-11 = 44$ son mujeres. Como hay en total 80 mujeres y 44 están en segundo ciclo, entonces el resto, que serían $80-44=36$ están en primer ciclo.
     \begin{center}
         \begin{tabular}{|c|c|c|} \hline
             Estudiantes (150)  & Varones (70) & Mujeres (80) \\ \hline
             Primer ciclo (95)  &   59         &   $\boxed{36}$         \\ \hline
             Segundo ciclo (55) &   11         &   44         \\ \hline
         \end{tabular}
-    \end{center}\hfill $\square$
+    \end{center}
+    Así, hay 36 estudiantes de primer ciclo mujeres y la respuesta correcta es la B.\hfill $\square$
 \end{solution}
 
 \question
@@ -206,6 +207,7 @@ Si hace 5 años la persona P tenía el cuádruplo de la edad de la persona Z y d
         \item Si P tiene 25 años, hace 5 tenía 20, cuya cuarta parte es 5, la edad de Z en ese momento. Así, Z actualmente tiene 10 años, y en 5 años tendrá 15, mientras P tendrá 30, que es el doble. Así, esta opción sí coincide y por tanto tiene que ser la correcta. 
         \item Si P tiene 30, hace 5 tenía 25, cuya cuarta parte es 6.25. Así Z tiene actualmente $6.25+5 = 11.25$ y en 5 años tendrá $16.25$. Pero esta no es la mitad de 35, la edad de P en 5 años. Esta no puede ser.
     \end{enumerate}
+    La opción correcta es la C. \hfill $\square$
 
     {\small\itshape 
     Veamos el método directo de obtener la edad de P con ecuaciones. Si $p$ es la edad de P y $z$ la edad de Z, entonces hace 5 años $p$ tenía $p-5$ años y Z tenía $z-5$ años. Como P tenía el cuádruplo de la edad de Z, entonces $p-5 = 4(z-5)$. Resolviendo esta ecuación obtenemos. De la misma forma, como en 5 años P tendrá $p+5$ años y el doble de la edad de Z, entonces $p+5 = 2(z+5)$ (pues Z tendrá $z+5$ años). Despejando la $p$ en la primera ecuación obtenemos
@@ -228,7 +230,7 @@ Si hace 5 años la persona P tenía el cuádruplo de la edad de la persona Z y d
 \begin{choices}
 \choice La suma del número mayor y el número menor da un número impar.
 \choice La suma de los dígitos del número mayor es impar.
-\choice El séxtuplo del cuadrado del número mayor es un número par.
+\CorrectChoice El séxtuplo del cuadrado del número mayor es un número par.
 \choice La suma de las cifras del número menor es par.
 \choice El producto de los dígitos del número mayor es par.
 \end{choices}
@@ -259,3 +261,5 @@ Si hace 5 años la persona P tenía el cuádruplo de la edad de la persona Z y d
 \end{solution}
 
 \end{questions}
+
+\printnotes
